MFH: Fixed bug #39971 (pg_insert/pg_update do not allow now() to be used for timestamp fields).